--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -27,6 +27,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -88,6 +89,11 @@ body{
     height: 56.9px;
     padding: 10px;
     font-weight: 900;
+
+    & a {
+        color: #011F27;
+        text-decoration: none;
+    }
 }
 
 .nav-burger{
@@ -247,6 +253,14 @@ button {
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid;
     padding: 1%;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+button:hover{
+    background-color: #00171F;
+    border-color: #fff;
+    
 }
 /* FIM SLOGAN */
 /* INICIO INTRODUCAO */
@@ -296,8 +310,20 @@ button {
     background-color: #007BFF;
 }
 
+.btn :nth-child(1):hover{
+    background-color: transparent;
+    border-color: #007BFF;
+    color: #007BFF;
+}
+
 .btn :nth-child(2){
     color: #007BFF;
+}
+
+.btn :nth-child(2):hover{
+    color: #fff;
+    background-color: #007BFF;
+    border-color: #fff;
 }
 /* FIM INTRODUCAO */
 /* INICIO PRINCIPIOS */
@@ -998,6 +1024,11 @@ form button{
     font-family: 'Montserrat-b';
     color: #c8c8c8;
     font-size: 4vw;
+    text-decoration: none;
+    & a {
+        text-decoration: none;
+        color: #c8c8c8;
+    }
 }
 
 .baixo h6{
