--- a/public/assets/styles/analiseDados.css
+++ b/public/assets/styles/analiseDados.css
@@ -103,13 +103,13 @@
     width: 95vw;
     margin-left: 5vw;
     align-items: center;
-    gap: 3vh;
+    gap: 12px;
 }
 
 .cabecalho{
     display: flex;
     gap: 20px;
-    margin-top: 2vh;
+    margin-top: 1vh;
     background-color:#F5F1F1;
     padding: 10px;
     border-radius: 10px;
@@ -166,20 +166,27 @@
 /* Painel dashs */
 
 .painelDash{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     background-color: #F5F1F1;
     width: 90vw;
-    padding: 15px;
+    padding: 10px;
     border-radius: 10px;
-    height: 77vh;
+    height: 82vh;
     box-shadow: 5px 2px 10px rgb(161, 160, 160);
 }
 
 .cabecalhoDash{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 88vw;
-    padding: 10px;
+    padding: 5px;
     border-radius: 10px;
     height: 8vh;
 }
+
 
 .texto{
     display: flex;
@@ -192,24 +199,39 @@
     font-weight: bold;
 }
 
+div .servidor{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1vw;
+    font-size: 30px;
+}
+
+div .servidor select{
+    font-family: 'Montserrat';
+    font-weight: 600;
+    background-color: #2C3E50;
+    color: #FFFF;
+    border: none;
+    border-radius: 12px;
+    padding: 0 4vw 0 4vw;
+}
+
 /* GRAFS */
+canvas {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+
 .grafSuperior{
     display: flex;
     gap: 2vw;
 }
 
-.chart-container-blue{
-    background: #012027;
-    background: linear-gradient(270deg, #012027, #04708D);
-    border-radius: 12px;
-    padding: 1vw;
-    width: 25vw;
-    height: 30vh;
-}
-
 .chartCabecalho{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;    
 }
 
 .filtrar{
@@ -242,68 +264,120 @@
 
 }
 
+.chart-container-blue{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #012027;
+    background: linear-gradient(270deg, #012027, #04708D);
+    border-radius: 12px;
+    padding: 1vw;
+    width: 30vw;
+    height: 30vh;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 .chart-container-blue h2{
     color: white;
     font-weight: 100;
 }
 
-.chart-container-ram, .chart-container-disco{
-    background-color: #D9D9D9;
-    border-radius: 12px;
-    padding: 2vw;
-}
-
-.chart-container-ram h2, .chart-container-disco h2{
-    color: black;
-    font-weight: 100;
-    width: 100%;
-}
-
-.chart-container-rede {
-    background-color: #D9D9D9;
-    border-radius: 12px;
-    padding: 2vw;
-    height: 50vw;
-}
-
-.chart-container-rede h2{
-    color: black;
-    font-weight: 100;
-}
-
-.chart-wrapper {
+.kpisTempo{
     display: flex;
-    flex-direction: row;
-    padding: 3vw;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 2vh;
 }
 
-.chart-wrapper div{
-    width: 30vw;
-    height: 30vw;
+
+
+.kpiTempo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background: #012027;
     background: linear-gradient(270deg, #012027, #04708D);
     border-radius: 12px;
+    padding: 1vw;
+    width: 25vw;
+    height: 12vh;
+    font-size: 18px;
+    color: #fffafa;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+    gap: 10px;
+
 }
 
-.chart-wrapper-disco {
+.kpiTempo h2{
+    font-size: 18px;
+}
+
+.branco{
+    background: none;
+    background-color: #fcfcfc;
+    color: black;
+}
+
+.txtKpi{
     display: flex;
-    flex-direction: row;
-    padding: 3vw;
-    justify-content: space-between;
+    gap: 5px;
+    font-size: 25px;
 }
 
-.chart-wrapper-disco div{
-    width: 30vw;
-    height: 30vw;
-    background: #012027;
-    background: linear-gradient(270deg, #012027, #04708D);
+
+
+/* GRAFS INFERIOR */
+.grafInferior{
+    display: flex;
+    gap: 2vw;
+}
+
+.chart-container-white{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fcfcfc;
     border-radius: 12px;
+    padding: 1vw;
+    width: 28vw;
+    height: 31vh;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+
+}
+.chart-container-white h2{
+    color: black;
+    font-weight: 100;
 }
 
+.chart-container-white .filtrar{
+    color: black;
+}
 
+.chart-container-alert{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fcfcfc;
+    border-radius: 12px;
+    padding: 1vw;
+    width: 25vw;
+    height: 31vh;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
 
+}
+.chart-container-alert h2{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    color: black;
+    font-weight: 100;
+    font-size: 18px;
+}
 
+.chart-container-alert .filtrar{
+    color: black;
+}
 
 
 
