--- a/public/assets/styles/alertas.css
+++ b/public/assets/styles/alertas.css
@@ -1,311 +1,353 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../fonts/Montserrat.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat";
 }
 
-
-
-.mainContainer{
-    display: flex;
-    gap: 10%;
-    flex-direction: row;
+.mainContainer {
+  display: flex;
+  gap: 10%;
+  flex-direction: row;
 }
 
-.contentContainer{
-    width: 90vw;
-    height: 100vh;
-    margin-left: 8%;
-    gap: 10%;
+.contentContainer {
+  width: 90vw;
+  height: 100vh;
+  margin-left: 8%;
+  gap: 10%;
 }
 
 /* NavBar */
-.menu{
-    display: flex;
-    grid-area: a;
-    align-items: center;
-    gap: 2vw;
-    background-color: #011F27;
-    flex-direction: column;
-    justify-content: flex-start;
-    z-index: 1000;
+.menu {
+  display: flex;
+  grid-area: a;
+  align-items: center;
+  gap: 2vw;
+  background-color: #011f27;
+  flex-direction: column;
+  justify-content: flex-start;
+  z-index: 1000;
 }
 
-.nav-burger{
-    display: none;
-    cursor: pointer;
-    margin-top: 5vw;
+.nav-burger {
+  display: none;
+  cursor: pointer;
+  margin-top: 5vw;
 }
 
-.nav-burger div{
-    height: 1vw;
-    width: 9vw;
-    background-color: rgb(255, 255, 255);
-    margin: 1.5vw;
-    transition: 0.7s;
+.nav-burger div {
+  height: 1vw;
+  width: 9vw;
+  background-color: rgb(255, 255, 255);
+  margin: 1.5vw;
+  transition: 0.7s;
 }
 
-.nav-active{
-    transform: translateX(0%);
-    transition: 1s;
-           
+.nav-active {
+  transform: translateX(0%);
+  transition: 1s;
 }
 
 /*  */
-.linha1-active{
-    transform: rotate(44deg);
-    transition: 0.7s;  
-    cursor: pointer;
+.linha1-active {
+  transform: rotate(44deg);
+  transition: 0.7s;
+  cursor: pointer;
 }
 
-.linha3-active{
-    transform: rotate(360deg);
-    transition: 0s;
-    opacity: 0%;
-    cursor: pointer;
+.linha3-active {
+  transform: rotate(360deg);
+  transition: 0s;
+  opacity: 0%;
+  cursor: pointer;
 }
 
-.linha2-active{
-    transform:rotate(-60deg);
-    transition: 0.7s;
-    transform: translateY(-1vw) rotate(135deg);
-    cursor: pointer;
+.linha2-active {
+  transform: rotate(-60deg);
+  transition: 0.7s;
+  transform: translateY(-1vw) rotate(135deg);
+  cursor: pointer;
 }
 /*  */
 
 .nav-burger {
-    display: block;
-    top: 5vw;
-    right: 5vw;
-    z-index: 1100;
+  display: block;
+  top: 5vw;
+  right: 5vw;
+  z-index: 1100;
 }
 
 .nav-active {
-    transform: translateX(0);
-    margin: 0;
+  transform: translateX(0);
+  margin: 0;
 }
 
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  gap: 5vw;
 
-.nav-links{
+  & span {
+    display: none;
+  }
+}
+
+.nav-links li i {
+  font-size: 12vw;
+}
+
+@media only screen and (min-width: 702px) {
+  .menu {
+    width: 5%;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+  }
+
+  .nav-links {
+    gap: 4vh;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 5vw;
-
-    & span{
-        display: none;
+    align-items: center;
+    /* transition: all 1s; */
+    & li i {
+      font-size: 40px;
     }
-    
-}
-
-.nav-links li i{
-    font-size: 12vw;
-}
-
-
-@media only screen and (min-width:702px){
-    .menu{
-        
-        width: 5%;
-        height: 100vh;
-        position: fixed;
-        left: 0;
+    & span {
+      display: none;
     }
 
-    .nav-links{
-        gap: 4vh;
-        width: 100%;
+    & ul {
+      width: 100%;
+    }
+
+    & li {
+      position: relative;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+  }
+
+  .nav-links-expanded .li-active::after {
+    /* display: none; */
+    width: 90% !important;
+    left: 0 !important;
+  }
+
+  .nav-links .li-active::after {
+    width: 70%;
+    position: absolute;
+    content: "";
+    bottom: -20%;
+    left: 15%;
+    border-radius: 2px;
+
+    background-color: #007bff;
+    height: 3.5px;
+  }
+
+  .nav-burger div {
+    height: 0.49vw;
+    width: 2.9vw;
+    background-color: rgb(255, 255, 255);
+    margin: 0.5vw;
+    transition: 0.7s;
+  }
+
+  .nav-burger {
+    margin-top: 2vh;
+  }
+
+  .nav-links-expanded {
+    /* animation: expandir 10s linear; */
+    margin-left: 5px;
+    & li {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 1em;
+
+      & span {
+        color: #fff;
+        font-family: "Montserrat";
+        font-size: 1.5vw;
+        font-weight: 550;
         display: flex;
-        align-items: center;
-        /* transition: all 1s; */
-        & li i{
-            font-size: 40px;
-        }
-        & span{
-            display: none;
-        }
-
-        & ul{
-            width: 100%;
-        }
-
-        & li{
-            position: relative;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
-
-        
+      }
     }
+  }
 
-    .nav-links-expanded .li-active::after{
-        /* display: none; */
-        width: 90% !important;
-        left: 0 !important;
+  .menu-expand {
+    width: 20%;
+    display: flex;
+    align-items: flex-start;
+    /* padding: 20px; */
+  }
+
+  .oculta {
+    display: none;
+  }
+
+  @keyframes expandir {
+    from {
+      width: 5%;
     }
-
-    .nav-links .li-active::after{
-        width: 70%;
-        position: absolute;
-        content: "";
-        bottom: -20%;
-        left: 15%;
-        border-radius: 2px;
-        
-        
-        background-color: #007BFF;
-        height: 3.5px;
+    to {
+      width: 20%;
     }
+  }
 
-    .nav-burger div{
-        height: 0.49vw;
-        width: 2.9vw;
-        background-color: rgb(255, 255, 255);
-        margin: 0.5vw;
-        transition: 0.7s;
+  @keyframes diminui {
+    from {
+      width: 20%;
     }
-
-    .nav-burger{
-        margin-top: 2vh;
+    to {
+      width: 5%;
     }
-
-    .nav-links-expanded{
-        /* animation: expandir 10s linear; */
-        margin-left: 5px;
-        & li{
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            gap: 1em;
-
-            & span{
-                color: #fff;
-                font-family: 'Montserrat';
-                font-size: 1.5vw;
-                font-weight: 550;
-                display: flex;
-            }
-        }
-    }
-
-    .menu-expand{
-        width: 20%;
-        display: flex;
-        align-items: flex-start;
-        /* padding: 20px; */
-
-    }
-
-
-
-    .oculta{
-        display: none;
-    }
-
-    @keyframes expandir{
-        from{
-            width: 5%
-        }to{
-            width: 20%;
-        }
-    }
-    
-    @keyframes diminui{
-        from{
-            width: 20%
-        }to{
-            width: 5%;
-        }
-    }
+  }
 }
 /* Termino NavBar */
 
-
-.perfilContainer{
-    color: #000;
-    display: flex;
-    width: inherit;
-    justify-content: flex-end;
-    background-color: var(--cinza);
-    height: 10%;
-    border-radius: 15px;
-    align-items: center;
-    box-shadow: 0px 9px 5px 0px rgba(0,0,0,0.75);
-    margin-top: 2%;
+.perfilContainer {
+  color: #000;
+  display: flex;
+  width: inherit;
+  justify-content: flex-end;
+  background-color: var(--cinza);
+  height: 10%;
+  border-radius: 15px;
+  align-items: center;
+  box-shadow: 0px 9px 5px 0px rgba(0, 0, 0, 0.75);
+  margin-top: 2%;
 }
 
-.perfil{
-    display: flex;
-    margin: 0 2% 0 0;
-    align-items: center;
+.perfil {
+  display: flex;
+  margin: 0 2% 0 0;
+  align-items: center;
 }
 
-.perfil p{
-    font-size: 20px;
-    text-align: center;
+.perfil p {
+  font-size: 20px;
+  text-align: center;
 }
 
-.perfil i{
-    border: 1px solid black;
-    border-radius: 50%;
-    margin-left: 0.5ch;
-    font-size: 50px;
-
+.perfil i {
+  border: 1px solid black;
+  border-radius: 50%;
+  margin-left: 0.5ch;
+  font-size: 50px;
 }
 
-.titleContainer{
-    margin: 3% 0 0 0;
+.titleContainer {
+  margin: 3% 0 0 0;
 }
 
-.alertasContainer{
-    width: 100%;
-    margin-top: 2%;
-    height: 70%;
-    background-color: var(--cinza);
-    border-radius: 10px;
-    box-shadow: 0px 9px 5px 0px rgba(0,0,0,0.75);
+.alertasContainer {
+  width: 100%;
+  margin-top: 2%;
+  height: 70%;
+  background-color: var(--cinza);
+  border-radius: 10px;
+  box-shadow: 0px 9px 5px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  /* justify-content:; */
 }
 
-.tabelaContainer{
-    width: 100%;
-    /* height: inherit; */
-    background-color: var(--cinza);
-    border-radius: 10px;
-    /* border: 1px solid black; */
-    border-spacing: 0 10px;
-    
+.tabelaContainer {
+  width: 100%;
+  background-color: var(--cinza);
+  border-radius: 10px;
+  border-spacing: 0 10px;
 }
 
-.tabelaContainer th{
-    font-size: 25px;
+.tabelaContainer th {
+  font-size: 25px;
 }
 
-.tabelaContainer td{
-    text-align: center;
-    font-size: 20px;
+.tabelaContainer td {
+  text-align: center;
+  font-size: 20px;
 }
 
-.tabelaContainer td:nth-child(6){
-    cursor: pointer;
-    font-size: 30px;
+.tabelaContainer td:nth-child(6) {
+  cursor: pointer;
+  font-size: 30px;
 }
 
-.bx-arrow-from-left:hover{
-    transform: scale(1.2);
-    transition: 0.2s;
+.bx-arrow-from-left:hover {
+  transform: scale(1.2);
+  transition: 0.2s;
 }
 
 :root {
-    --cinza: #D9D9D9;
-  }
+  --cinza: #d9d9d9;
+}
+
+.modal-test {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.containerConfigAlerta {
+  margin: 2.5% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: start;
+}
+
+.containerComponentes {
+  margin: 2.5% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: start;
+  line-height: 30px;
+}
+
+.alertaModal {
+  background-color: var(--cinza);
+  border-radius: 10px;
+  padding: 0;
+}
+
+.pagination {
+  /* margin-bottom: 15px; */
+  text-align: center;
+  align-self: flex-start;
+  position: fixed;
+  height: 68%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+.pagination button {
+  margin: 0 3px;
+  padding: 5px 10px;
+  border: none;
+  background-color: #004;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.pagination button.active {
+  background-color: #008;
+}
