--- a/web-data-viz/public/assets/styles/funcionarios.css
+++ b/web-data-viz/public/assets/styles/funcionarios.css
@@ -304,7 +304,8 @@
     align-items: flex-start;
   }
   
-  .containerConfigAlerta {
+  .containerCadastroFunc {
+    height: inherit;
     margin: 2.5% 0;
     display: flex;
     flex-direction: column;
@@ -369,4 +370,29 @@
   .btnCadastro:hover{
     box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
     transition: 0.2s;
+  }
+
+  #usuarioNome{
+    margin-left: 10px;
+  }
+
+  .funcModal{
+    height: 65vh;
+  }
+
+  .containerCadastroFunc label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  
+  .containerCadastroFunc input,
+  .containerCadastroFunc select {
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-top: 5px;
+    width: inherit;
   }
