feat: acesso gestor empresa finalizado

--- a/web-data-viz/public/assets/styles/empresa.css
+++ b/web-data-viz/public/assets/styles/empresa.css
@@ -135,7 +135,7 @@ body{
 
 .empresa{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     font-size: 3vw;
 }
@@ -171,13 +171,18 @@ body{
     margin-left: 2%;
 }
 
+h2{
+    margin: 0 0 2% 0;
+}
+
 .dash {
     gap: 3%;
     border-radius: 12px;
     background-color: #F5F1F1;
     display: flex;
     flex-direction: column;
-    height: 85%;
+    height: fit-content;
+    padding-bottom: 5%;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
