--- a/web-data-viz/public/assets/styles/funcionarios.css
+++ b/web-data-viz/public/assets/styles/funcionarios.css
@@ -223,7 +223,7 @@
   color: #000;
   display: flex;
   width: inherit;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: var(--cinza);
   height: 10%;
   border-radius: 15px;
@@ -235,19 +235,35 @@
 .perfil {
   display: flex;
   margin: 0 2% 0 0;
+  width: inherit;
+  justify-content: space-between;
   align-items: center;
 }
 
+.persona{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1vw;
+}
+
+
 .perfil p {
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
 }
 
+.empresa{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .perfil i {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 50%;
   margin-left: 0.5ch;
-  font-size: 50px;
+  font-size: 4rem;
 }
 
 .titleContainer {
