--- a/web-data-viz/public/assets/styles/alertas.css
+++ b/web-data-viz/public/assets/styles/alertas.css
@@ -222,8 +222,7 @@
 .perfilContainer {
   color: #000;
   display: flex;
-  width: inherit;
-  justify-content: flex-end;
+  width: 100%;
   background-color: var(--cinza);
   height: 10%;
   border-radius: 15px;
@@ -232,10 +231,31 @@
   margin-top: 2%;
 }
 
+.persona {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1vw;
+}
+
+.empresa {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1vw;
+}
+
 .perfil {
   display: flex;
   margin: 0 2% 0 0;
+  /* align-items: center; */
+  justify-content: space-between;
   align-items: center;
+  width: inherit;
+}
+
+.persona {
+  display: flex;
 }
 
 .perfil p {
@@ -244,7 +264,6 @@
 }
 
 .perfil i {
-  border: 1px solid black;
   border-radius: 50%;
   margin-left: 0.5ch;
   font-size: 50px;
