--- a/web-data-viz/public/assets/styles/alertas.css
+++ b/web-data-viz/public/assets/styles/alertas.css
@@ -301,9 +301,13 @@
   font-size: 20px;
 }
 
-.tabelaContainer td:nth-child(6) {
+.tabelaContainer td:nth-child(7) {
   cursor: pointer;
   font-size: 30px;
+}
+
+.tabelaContainer td:nth-child(1) {
+  border-bottom: 2px solid black;
 }
 
 .bx-arrow-from-left:hover {
