--- a/web-data-viz/public/assets/styles/alertas.css
+++ b/web-data-viz/public/assets/styles/alertas.css
@@ -18,6 +18,17 @@
   flex-direction: row;
 }
 
+hr {
+  border: 1px solid rgba(78, 78, 78, 0.707);
+  width: 100%;
+}
+
+textarea {
+  border-radius: 5px;
+  border-color: #858585e9;
+  padding: 5px;
+}
+
 .contentContainer {
   width: 90vw;
   height: 100vh;
